# jelly-tagger

./: .gitignore  LICENSE  README.md  jelly_tagger.py  movies.py  pyproject.toml  tv.py
tests/: conftest.py  test_cli.py  test_movies.py  test_tv_execute.py  test_tv_parsing.py  test_tv_plan.py
